<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ui.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_routine"
        android:name="ui.fragments.RoutineFragment"
        android:label="@string/menu_routine"
        tools:layout="@layout/fragment_routine" />

    <fragment
        android:id="@+id/nav_people"
        android:name="ui.fragments.PeopleFragment"
        android:label="@string/menu_people"
        tools:layout="@layout/fragment_people" />
</navigation>