<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   android:padding="20dp"
    android:gravity="center"
    android:background="@color/endGColor"
    tools:context="ui.fragments.RoutineFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

           <androidx.cardview.widget.CardView
               app:cardElevation="10dp"
               android:id="@+id/MondayCard_routine"
               android:layout_width="100dp"
               android:layout_height="100dp"
               app:cardCornerRadius="20dp"
               app:cardBackgroundColor="@color/colorAccent">

               <TextView
                   android:id="@+id/monday"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/monday"
                   android:textStyle="bold"
                   android:layout_gravity="center"
                   android:textSize="15sp"/>
           </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                app:cardElevation="10dp"
                android:id="@+id/TuesdayCard_routine"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="20dp"
                app:cardBackgroundColor="@color/colorAccent">

                <TextView
                    android:id="@+id/tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            app:cardElevation="10dp"
            android:id="@+id/WednesdayCard_routine"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorAccent">

            <TextView
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            app:cardElevation="10dp"
            android:id="@+id/ThursdayCard_routine"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="20dp"
            android:layout_marginStart="20dp"
            app:cardBackgroundColor="@color/colorAccent">

            <TextView
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="15sp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            app:cardElevation="10dp"
            android:id="@+id/FridayCard_routine"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorAccent">

            <TextView
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            app:cardElevation="10dp"
            android:id="@+id/SaturdayCard_routine"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="20dp"
            android:layout_marginStart="20dp"
            app:cardBackgroundColor="@color/colorAccent">

            <TextView
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>